--- a/Template/index.html
+++ b/Template/index.html
@@ -12,7 +12,38 @@
 
 <body>
 
-    <div id="thing0" class="thing"></div>
+    <div class="game"> 
+
+        <div class="container">
+            <p id="treeText" class="blockText">wood : 5</p>
+            <div id="tree" class="tree block"></div>   
+        </div>
+
+        <div class="container">
+            <p id="ironText" class="blockText">iron : 5</p>
+            <div id="iron" class="iron block"></div> 
+        </div>
+
+        <div class="container">
+            <p id="goldText" class="blockText">gold : 5</p>
+            <div id="gold" class="gold block"></div>
+        </div>
+        
+    </div>
+    <div class="wrapper"> 
+        <h3>UPGRADE YOUR MINING</h3>
+        <div class="craftingTable">
+            <div class="container">
+                <p id="toolText" class="upgradeText">tool</p>
+                <div id="tool" class="tool upgrade"></div>
+            </div>
+            <div class="container">
+                <p id="workerText" class="upgradeText">worker</p>
+                <div id="worker" class="worker upgrade"></div> 
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
