--- a/Template/style.css
+++ b/Template/style.css
@@ -1,11 +1,88 @@
-.thing {
-    width: 100px;
-    height: 100px;
-    background-color: deeppink;
-    position: absolute;
-    border-radius: 50%;
+.game { 
+    width: 100%;
+    height: 70%;
+    background-color: rgb(0, 0, 0);
+    position: relative;
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center;
+    gap: 80px;
+
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.blockText {
+    color: azure;
+    height: 30px;
+    margin: 0;
+
+}
+
+.block {
+    width: 100px;
+    height: 100px;
+}
+.tree {
+    background-color: brown;
+
+}
+
+.iron {
+    background-color: aqua;
+}
+
+.gold {
+    background-color: rgb(232, 255, 127);
+}
+
+.wrapper {
+    width: 100%;
+    height: 30%;
+    background-color: brown;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.craftingTable {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.upgradeText {
+    color: azure;
+    height: 30px;
+    margin: 0;
+}
+
+.upgrade {
+    width: 80px;
+    height: 80px;
+}
+
+.tool {
+    background-color: blue;
+}
+
+.worker {
+    background-color: blueviolet;
+}
+
+h3 {
+    color: aliceblue;
+}
 /* Prevent padding and border from affecting element width. */
 *,
 ::before,
@@ -19,6 +96,15 @@ body {
     padding: 0;
     line-height: inherit;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+html {
+    height: 100%;
+    width: 100%;
 }
 
 #sample-output {
