--- a/Template/index.html
+++ b/Template/index.html
@@ -12,38 +12,22 @@
 
 <body>
 
-    <div class="game"> 
-
-        <div class="container">
-            <p id="treeText" class="blockText">wood : 5</p>
-            <div id="tree" class="tree block"></div>   
-        </div>
-
-        <div class="container">
-            <p id="ironText" class="blockText">iron : 5</p>
-            <div id="iron" class="iron block"></div> 
-        </div>
-
-        <div class="container">
-            <p id="goldText" class="blockText">gold : 5</p>
-            <div id="gold" class="gold block"></div>
-        </div>
+    <div id="space0" class="space">
+        <div id="blackhole0" class="blackhole"></div>
+        <div id="player0" class="player"></div>
+        <div id="star0" class="star"></div>
+        <div id="star1" class="star1"></div>
+        <div id="star2" class="star2"></div>
+        <div id="star3" class="star3"></div>
+        <div id="star4" class="star4"></div>
+        <div id="star5" class="star5"></div>
+        <div id="star6" class="star6"></div>
+        <div id="star7" class="star7"></div>
+        <div id="star8" class="star8"></div>
+        <h1 id="message0" class="message">YOU MADE IT!</h1>
         
-    </div>
-    <div class="wrapper"> 
-        <h3>UPGRADE YOUR MINING</h3>
-        <div class="craftingTable">
-            <div class="container">
-                <p id="toolText" class="upgradeText">tool</p>
-                <div id="tool" class="tool upgrade"></div>
-            </div>
-            <div class="container">
-                <p id="workerText" class="upgradeText">worker</p>
-                <div id="worker" class="worker upgrade"></div> 
-            </div>
-        </div>
-    </div>
 
+    </div> 
 
 </body>
 
