added another keyboard event and more comments

--- a/Template/index.html
+++ b/Template/index.html
@@ -24,6 +24,8 @@
         <div id="star6" class="star6"></div>
         <div id="star7" class="star7"></div>
         <div id="star8" class="star8"></div>
+        <div id="star9" class="star9"></div>
+        <div id="star10" class="star10"></div>
         <h1 id="message0" class="message">YOU MADE IT!</h1>
         
 
