--- a/Template/style.css
+++ b/Template/style.css
@@ -209,6 +209,48 @@
     );
 }
 
+.star9 { 
+    width: 80px;
+    height: 80px;
+    background-color: rgb(250, 204, 96);
+    position: absolute; /*position absolute in div with position relative = free movements*/
+    top: 200px; 
+    left: 300px;
+    clip-path: polygon(
+        50% 0%,   /* top */
+        61% 35%,  /* upper right */
+        98% 35%,  /* right tip */
+        68% 57%,  /* lower right inner */
+        79% 91%,  /* bottom right */
+        50% 70%,  /* bottom center */
+        21% 91%,  /* bottom left */
+        32% 57%,  /* lower left inner */
+        2% 35%,   /* left tip */
+        39% 35%   /* upper left */
+    );
+}
+
+.star10 { 
+    width: 60px;
+    height: 60px;
+    background-color: rgb(250, 204, 96);
+    position: absolute; /*position absolute in div with position relative = free movements*/
+    top: 400px; 
+    left: 250px;
+    clip-path: polygon(
+        50% 0%,   /* top */
+        61% 35%,  /* upper right */
+        98% 35%,  /* right tip */
+        68% 57%,  /* lower right inner */
+        79% 91%,  /* bottom right */
+        50% 70%,  /* bottom center */
+        21% 91%,  /* bottom left */
+        32% 57%,  /* lower left inner */
+        2% 35%,   /* left tip */
+        39% 35%   /* upper left */
+    );
+}
+
 .blackhole { 
     width: 130px;
     height: 130px;
