--- a/Template/index.html
+++ b/Template/index.html
@@ -26,6 +26,14 @@
         <div id="star8" class="star8"></div>
         <div id="star9" class="star9"></div>
         <div id="star10" class="star10"></div>
+        <div id="star11" class="star11"></div>
+        <div id="star12" class="star12"></div>
+        <div id="star13" class="star13"></div>
+        <div id="star14" class="star14"></div>
+        <div id="star15" class="star15"></div>
+        <div id="star16" class="star16"></div>
+        <div id="star17" class="star17"></div>
+        <div id="star18" class="star18"></div>
         <h1 id="message0" class="message">YOU MADE IT!</h1>
         
 
